# Yu-gi-oh-Cards

./: .gitignore  LICENSE  README.md
Backend-RAG Agent/: .gitignore  bot.py  main.py  pyproject.toml  requirements.txt
Backend-RAG Agent/data/: master_card_list_cleaned.txt  master_card_map.json  vip_card_list.txt
Backend-RAG Agent/ygo_db/e1e729e4-7493-4e69-9467-405675114693/: index_metadata.pickle
yugioh - Interface/: .firebaserc  .gitignore  firestore.rules  index.html  package-lock.json  package.json
yugioh - Interface/src/: AdminDashboard.css  AdminDashboard.tsx  App.css  Chat.css  Chat.tsx  ChatPage.css  ChatPage.tsx  ChatSidebar.css  ChatSidebar.tsx  Community.css  Community.tsx  DeckBuilder.tsx  LandingPage.css  LandingPage.tsx  Layout.css  Layout.tsx  SavedDecks.css  SavedDecks.tsx  SharedDeckView.css  SharedDeckView.tsx  components.css  firebase.ts  index.css  main.tsx  types.ts
