[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "chromadb>=1.3.7",
    "discord>=2.3.2",
    "fastapi>=0.124.4",
    "firebase-admin>=7.1.0",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.3",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
]
